update & add some file

--- a/Fundamentals/f3_variables_datatype.ipynb
+++ b/Fundamentals/f3_variables_datatype.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variables and Data Types\n",
+    "# Fundamentals - Variables and Data Types\n",
     "---\n",
     "\n",
     "Pada bagian ini kita akan belajar cara membuat sebuah variabel beserta aturan-aturan penamaan variabel. Selain itu kita juga akan belajar tentang tipe-tipe data yang ada pada python."
