--- a/Fundamentals/f4_basic_operators.ipynb
+++ b/Fundamentals/f4_basic_operators.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic Operators\n",
+    "# Fundamentals - Basic Operators\n",
     "---\n",
     "\n",
     "Pada bahasa pemrograman operator digunakan untuk melakukan operasi pada variabel atau nilai.\n",
