--- a/Fundamentals/f2_basicsyntax.ipynb
+++ b/Fundamentals/f2_basicsyntax.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Basic Syntax\n",
+    "# Fundamentals - Python Basic Syntax\n",
     "---\n",
     "\n",
     "Struktur (syntax) bahasa pemrograman python memiliki banyak kemiripan dengan Bahasa Inggris, sehingga mudah dibaca dan dipahami. \n",
