--- a/Fundamentals/f5_conditions.ipynb
+++ b/Fundamentals/f5_conditions.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -252,14 +252,14 @@
     }
    ],
    "source": [
-    "num1 = 51\n",
+    "num1 = 50\n",
     "\n",
     "if num1 > 10:\n",
     "    print(\"num1 lebih besar dari 10\")\n",
     "    if num1 % 2 == 0:\n",
-    "        print(\"dan merupakan bilangan genap\")\n",
+    "        pass\n",
     "    else:\n",
-    "        pass\n"
+    "        print(\"dan merupakan bilangan ganjil\")\n"
    ]
   },
   {
