--- a/Fundamentals/f4_basic_operators.ipynb
+++ b/Fundamentals/f4_basic_operators.ipynb
@@ -411,7 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Operator logika\n",
+    "## Operator logika\n",
     "---\n",
     "\n",
     "Operator logika digunakan untuk mengkombinasikan beberapa conditional statement."
